// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`swapScheduled creates a swap for a swap request 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": "100000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositReceivedAt": null,
  "depositReceivedBlockIndex": null,
  "depositTransactionRef": null,
  "destAddress": null,
  "destAsset": "Flip",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "id": Any<BigInt>,
  "nativeId": 12n,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": null,
  "swapRequestedAt": 2024-08-23T13:10:06.000Z,
  "swaps": [
    {
      "createdAt": Any<Date>,
      "destAsset": "Flip",
      "id": Any<BigInt>,
      "intermediateAmount": null,
      "latestSwapRescheduledAt": null,
      "latestSwapRescheduledBlockIndex": null,
      "nativeId": 158n,
      "retryCount": 0,
      "srcAsset": "Btc",
      "swapExecutedAt": null,
      "swapExecutedBlockIndex": null,
      "swapInputAmount": "125000000000",
      "swapOutputAmount": null,
      "swapRequestId": Any<BigInt>,
      "swapScheduledAt": 2024-08-23T13:10:06.000Z,
      "swapScheduledBlockIndex": "42-42",
      "type": "SWAP",
      "updatedAt": Any<Date>,
    },
  ],
}
`;

exports[`swapScheduled spec 1.5.0 creates a swap request and swap 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": "100000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositReceivedAt": null,
  "depositReceivedBlockIndex": null,
  "depositTransactionRef": "3412",
  "destAddress": "0xa56A6be23b6Cf39D9448FF6e897C29c41c8fbDFF",
  "destAsset": "Flip",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fees": [
    {
      "amount": "1000000",
      "asset": "Btc",
      "id": Any<BigInt>,
      "swapId": null,
      "swapRequestId": Any<BigInt>,
      "type": "BROKER",
    },
  ],
  "id": Any<BigInt>,
  "nativeId": 2n,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "LEGACY_SWAP",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": null,
  "swapRequestedAt": 2024-08-23T13:10:06.000Z,
  "swaps": [
    {
      "createdAt": Any<Date>,
      "destAsset": "Flip",
      "fees": [],
      "id": Any<BigInt>,
      "intermediateAmount": null,
      "latestSwapRescheduledAt": null,
      "latestSwapRescheduledBlockIndex": null,
      "nativeId": 2n,
      "retryCount": 0,
      "srcAsset": "Btc",
      "swapExecutedAt": null,
      "swapExecutedBlockIndex": null,
      "swapInputAmount": "99000000",
      "swapOutputAmount": null,
      "swapRequestId": Any<BigInt>,
      "swapScheduledAt": 2024-08-23T13:10:06.000Z,
      "swapScheduledBlockIndex": "42-42",
      "type": "SWAP",
      "updatedAt": Any<Date>,
    },
  ],
}
`;
